--- a/css/main.css
+++ b/css/main.css
@@ -68,4 +68,26 @@ section p {
   margin: 0;
 }
 
+@media only screen and (min-width: 25em) {
+
+  html {
+    font-size: 100%;
+    line-height: 1.3;
+  }
+
+  h1,
+  p {
+    margin: 0 0 1.3rem;
+  }
+
+  .section-letter {
+    width: 42%;
+  }
+
+  .section-icon {
+    width: 42%;
+  }
+
+}
+
 }
