--- a/css/main.css
+++ b/css/main.css
@@ -90,4 +90,42 @@ section p {
 
 }
 
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  h1,
+  p {
+    margin: 0 0 1.4rem;
+  }
+
+  section {
+    max-width: none;
+    max-height: 45em;
+    padding: 1.4em;
+  }
+
+  .section-letter {
+    width: 20%;
+    margin-left: 1.4rem;
+  }
+
+  .section-body {
+    display: inline-block;
+    float: left;
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  .section-icon {
+    float: right;
+    width: 20%;
+    margin-right: 1.4rem;
+  }
+
+}
+
 }
