--- a/css/main.css
+++ b/css/main.css
@@ -128,4 +128,27 @@ section p {
 
 }
 
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  h1,
+  p {
+    margin: 0 0 1.5rem;
+  }
+
+  section p {
+    width: 100%;
+  }
+
+  .img-flex {
+    width: 40%;
+    margin: 0 auto;
+  }
+
+}
+
 }
